Add the Connector interface and PostgreSQL Connection for Source Systems
Closes #45
